--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing article</h1>
+<h1>投稿編集</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to '保存', @article %> |
+<%= link_to '戻る', articles_path %>
