--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,14 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name, "名前" %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :article %><br />
+    <%= f.label :article, "内容" %><br />
     <%= f.text_area :article %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit("投稿") %>
   </div>
 <% end %>
