--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Listing articles</h1>
+<h1>投稿一覧</h1>
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Article</th>
+    <th>投稿者名</th>
+    <th>内容</th>
+    <th>投稿日時</th>
     <th></th>
     <th></th>
     <th></th>
@@ -13,13 +14,16 @@
   <tr>
     <td><%= article.name %></td>
     <td><%= article.article %></td>
-    <td><%= link_to 'Show', article %></td>
-    <td><%= link_to 'Edit', edit_article_path(article) %></td>
-    <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= article.created_at %></td>
+    <td><%= link_to '編集', edit_article_path(article) %></td>
+    <td><%= link_to '削除', article, method: :delete, data: { confirm: '削除しますか？' } %></td>
+    <td><%= link_to 'Permalink', article %></td>
+
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Article', new_article_path %>
+<h2>新規投稿</h2>
+<%= render 'form', :article => @article %>
