--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New article</h1>
+<h1>新規投稿</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', articles_path %>
+<%= link_to '戻る', articles_path %>
