--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>投稿者名:</b>
   <%= @article.name %>
 </p>
 
 <p>
-  <b>Article:</b>
+  <b>内容:</b>
   <%= @article.article %>
 </p>
+<p>
+  <b>作成日:</b>
+  <%= @article.created_at %>
+</p>
+
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
