--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,8 +10,8 @@
   <%= @article.article %>
 </p>
 <p>
-  <b>作成日:</b>
-  <%= @article.created_at %>
+  <b>投稿日時:</b>
+  <%= @article.created_at.strftime('%Y年%m月%d日 %H:%M:%S') %>
 </p>
 
 
