--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <b>内容:</b>
-  <%= @article.article %>
+  <%= simple_format(@article.article) %>
 </p>
 <p>
   <b>投稿日時:</b>
@@ -15,5 +15,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to '編集', edit_article_path(@article) %> |
+<%= link_to '戻る', articles_path %>
